--- a/docs/source/10xVisium_BreastCancer_Tutorial.ipynb
+++ b/docs/source/10xVisium_BreastCancer_Tutorial.ipynb
@@ -5,7 +5,7 @@
    "id": "dfc00b0b",
    "metadata": {},
    "source": [
-    "# Tutorial 4: Annotation of 10X Visium Breast Cancer data"
+    "# Tutorial 5: Annotation of 10X Visium Breast Cancer data"
    ]
   },
   {
@@ -30,8 +30,8 @@
    "id": "3cf96ada",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:06:48.858206Z",
-     "start_time": "2022-09-10T03:06:47.613588Z"
+     "end_time": "2022-10-10T12:47:26.879461Z",
+     "start_time": "2022-10-10T12:47:25.720736Z"
     }
    },
    "outputs": [],
@@ -51,8 +51,8 @@
    "id": "6a93efe4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:06:48.868877Z",
-     "start_time": "2022-09-10T03:06:48.859278Z"
+     "end_time": "2022-10-10T12:47:26.920814Z",
+     "start_time": "2022-10-10T12:47:26.880397Z"
     }
    },
    "outputs": [],
@@ -77,8 +77,8 @@
    "id": "5134942a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:06:48.871268Z",
-     "start_time": "2022-09-10T03:06:48.869710Z"
+     "end_time": "2022-10-10T12:47:26.925013Z",
+     "start_time": "2022-10-10T12:47:26.922289Z"
     }
    },
    "outputs": [],
@@ -93,8 +93,8 @@
    "id": "832937dd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:06:49.100871Z",
-     "start_time": "2022-09-10T03:06:48.872383Z"
+     "end_time": "2022-10-10T12:47:27.034130Z",
+     "start_time": "2022-10-10T12:47:26.926460Z"
     }
    },
    "outputs": [
@@ -123,6 +123,7 @@
    "source": [
     "## BCS1 DATASET\n",
     "BCS1 = sc.read_h5ad(\"/home/lizhen/code/PAST/Data/10x_BCS1.h5ad\")\n",
+    "BCS1.var_names_make_unique()\n",
     "BCS1"
    ]
   },
@@ -132,8 +133,8 @@
    "id": "223009bf",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:06:49.341654Z",
-     "start_time": "2022-09-10T03:06:49.101819Z"
+     "end_time": "2022-10-10T12:47:27.137186Z",
+     "start_time": "2022-10-10T12:47:27.034938Z"
     }
    },
    "outputs": [
@@ -162,6 +163,7 @@
    "source": [
     "## BCS2 DATASET\n",
     "BCS2 = sc.read_h5ad(\"/home/lizhen/code/PAST/Data/10x_BCS2.h5ad\")\n",
+    "BCS2.var_names_make_unique()\n",
     "BCS2"
    ]
   },
@@ -187,22 +189,14 @@
    "id": "57e355df",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:06:49.385832Z",
-     "start_time": "2022-09-10T03:06:49.342704Z"
+     "end_time": "2022-10-10T12:47:27.173019Z",
+     "start_time": "2022-10-10T12:47:27.137981Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Variable names are not unique. To make them unique, call `.var_names_make_unique`.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "past.setup_seed(666)\n",
-    "rdata = BCS1.copy()"
+    "bcs1 = BCS1.copy()"
    ]
   },
   {
@@ -210,7 +204,7 @@
    "id": "2054f2d6",
    "metadata": {},
    "source": [
-    "Then we preprocess BCS1 dataset `rdata`."
+    "Then we preprocess BCS1 dataset `bcs1`."
    ]
   },
   {
@@ -219,21 +213,11 @@
    "id": "fc8ff41b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:07:07.726444Z",
-     "start_time": "2022-09-10T03:06:49.387007Z"
+     "end_time": "2022-10-10T12:47:44.724597Z",
+     "start_time": "2022-10-10T12:47:27.173853Z"
     }
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Variable names are not unique. To make them unique, call `.var_names_make_unique`.\n",
-      "Variable names are not unique. To make them unique, call `.var_names_make_unique`.\n",
-      "Variable names are not unique. To make them unique, call `.var_names_make_unique`.\n",
-      "Variable names are not unique. To make them unique, call `.var_names_make_unique`.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -250,8 +234,43 @@
     }
    ],
    "source": [
-    "rdata = past.preprocess(rdata, min_cells=3, is_filter_MT=True, n_tops=3000, gene_method=\"gearyc\")\n",
-    "rdata"
+    "bcs1 = past.preprocess(bcs1, min_cells=3, is_filter_MT=True, n_tops=3000, gene_method=\"gearyc\")\n",
+    "bcs1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bc8ed0a",
+   "metadata": {},
+   "source": [
+    "Here we construct self-pseudo-bulk prior matrix with BCS1 itself for better training of PAST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "608f4f2b",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-10T12:47:45.453294Z",
+     "start_time": "2022-10-10T12:47:44.725452Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "add 0 zero features to reference; Current total 3000 genes\n",
+      "bulk_data's shape: (20, 3000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "rdata = BCS1.copy()\n",
+    "rdata = past.integration(rdata, bcs1)\n",
+    "rdata = past.preprocess(rdata, min_cells=None, target_sum=None, is_filter_MT=False, n_tops=None)\n",
+    "rdata = past.get_bulk(rdata, key=\"fine_annot_type\")"
    ]
   },
   {
@@ -264,17 +283,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "68459e99",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:07:09.769845Z",
-     "start_time": "2022-09-10T03:07:07.727420Z"
+     "end_time": "2022-10-10T12:47:47.105102Z",
+     "start_time": "2022-10-10T12:47:45.454107Z"
     }
    },
    "outputs": [],
    "source": [
-    "PAST_model = past.PAST(d_in=rdata.shape[1], d_lat=50, k_neighbors=6, dropout=0.1).to(device)"
+    "PAST_model = past.PAST(d_in=bcs1.shape[1], d_lat=50, k_neighbors=6, dropout=0.1).to(device)"
    ]
   },
   {
@@ -287,56 +306,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "735642a2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:07:43.009248Z",
-     "start_time": "2022-09-10T03:07:09.770855Z"
+     "end_time": "2022-10-10T12:48:15.341696Z",
+     "start_time": "2022-10-10T12:47:47.106403Z"
     }
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Variable names are not unique. To make them unique, call `.var_names_make_unique`.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This dataset is small enough to train without Ripplewalk_sampler\n",
-      "add 0 zero features to reference; Current total 3000 genes\n",
-      "bulk_data's shape: (20, 3000)\n",
-      "Epoch:10 Time:2.03s Loss: 11.886013\n",
-      "Epoch:20 Time:1.61s Loss: 7.113080\n",
-      "Epoch:30 Time:1.56s Loss: 5.825770\n",
-      "Epoch:40 Time:1.60s Loss: 4.731458\n",
-      "Epoch:50 Time:1.56s Loss: 3.939750\n",
-      "Epoch:60 Time:1.59s Loss: 3.305109\n",
-      "Epoch:70 Time:1.61s Loss: 2.785605\n",
-      "Epoch:80 Time:1.59s Loss: 2.368107\n",
-      "Epoch:90 Time:1.57s Loss: 1.977017\n",
-      "Epoch:100 Time:1.61s Loss: 1.635575\n",
-      "Epoch:110 Time:1.60s Loss: 1.355002\n",
-      "Epoch:120 Time:1.56s Loss: 1.136173\n",
-      "Epoch:130 Time:1.66s Loss: 0.963197\n",
-      "Epoch:140 Time:1.37s Loss: 0.824174\n",
-      "Epoch:150 Time:1.36s Loss: 0.701309\n",
-      "Epoch:160 Time:1.37s Loss: 0.606451\n",
-      "Epoch:170 Time:1.36s Loss: 0.523634\n",
-      "Epoch:180 Time:1.35s Loss: 0.470505\n",
-      "Epoch:190 Time:1.35s Loss: 0.443526\n",
-      "Epoch:200 Time:1.37s Loss: 0.427254\n",
+      "This dataset is smaller than batchsize so that ripple walk sampler is not used!\n",
+      "Epoch:10 Time:1.64s Loss: 11.886013\n",
+      "Epoch:20 Time:1.33s Loss: 7.113080\n",
+      "Epoch:30 Time:1.33s Loss: 5.825770\n",
+      "Epoch:40 Time:1.33s Loss: 4.731458\n",
+      "Epoch:50 Time:1.34s Loss: 3.939750\n",
+      "Epoch:60 Time:1.32s Loss: 3.305109\n",
+      "Epoch:70 Time:1.32s Loss: 2.785605\n",
+      "Epoch:80 Time:1.34s Loss: 2.368107\n",
+      "Epoch:90 Time:1.34s Loss: 1.977017\n",
+      "Epoch:100 Time:1.32s Loss: 1.635575\n",
+      "Epoch:110 Time:1.32s Loss: 1.355002\n",
+      "Epoch:120 Time:1.31s Loss: 1.136173\n",
+      "Epoch:130 Time:1.32s Loss: 0.963197\n",
+      "Epoch:140 Time:1.32s Loss: 0.824174\n",
+      "Epoch:150 Time:1.31s Loss: 0.701309\n",
+      "Epoch:160 Time:1.31s Loss: 0.606451\n",
+      "Epoch:170 Time:1.32s Loss: 0.523634\n",
+      "Epoch:180 Time:1.32s Loss: 0.470505\n",
+      "Epoch:190 Time:1.32s Loss: 0.443526\n",
+      "Epoch:200 Time:1.31s Loss: 0.427254\n",
       "Model Converge\n"
      ]
     }
    ],
    "source": [
-    "PAST_model.model_train(rdata, rdata=BCS1.copy(), anno_key=\"fine_annot_type\", \n",
-    "                       epochs=50, lr=1e-3, batchsize=6400, device=device)"
+    "PAST_model.model_train(bcs1, rdata=rdata, epochs=50, lr=1e-3, device=device)"
    ]
   },
   {
@@ -357,40 +366,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "9407ea2b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:07:44.265796Z",
-     "start_time": "2022-09-10T03:07:43.011231Z"
+     "end_time": "2022-10-10T12:48:16.546999Z",
+     "start_time": "2022-10-10T12:48:15.342629Z"
     }
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Variable names are not unique. To make them unique, call `.var_names_make_unique`.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "add 0 zero features to reference; Current total 3000 genes\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Variable names are not unique. To make them unique, call `.var_names_make_unique`.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "add 0 zero features to reference; Current total 3000 genes\n",
       "add 0 zero features to reference; Current total 3000 genes\n"
      ]
     },
@@ -402,19 +391,19 @@
        "    obsm: 'spatial'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cdata = BCS1.copy()\n",
-    "cdata = past.integration(cdata, rdata)\n",
+    "cdata = past.integration(cdata, bcs1)\n",
     "cdata.obs[\"sample_id\"] = [\"BCS1\"] * cdata.shape[0]\n",
     "adata = cdata.copy()\n",
     "\n",
     "cdata = BCS2.copy()\n",
-    "cdata = past.integration(cdata, rdata)\n",
+    "cdata = past.integration(cdata, bcs1)\n",
     "cdata.obs[\"sample_id\"] = [\"BCS2\"] * cdata.shape[0]\n",
     "adata = adata.concatenate([cdata.copy()])\n",
     "adata"
@@ -430,12 +419,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "afd36218",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:07:44.486038Z",
-     "start_time": "2022-09-10T03:07:44.266598Z"
+     "end_time": "2022-10-10T12:48:16.765753Z",
+     "start_time": "2022-10-10T12:48:16.547983Z"
     }
    },
    "outputs": [],
@@ -453,12 +442,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "5e6c2f09",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:07:45.269883Z",
-     "start_time": "2022-09-10T03:07:44.486987Z"
+     "end_time": "2022-10-10T12:48:17.225654Z",
+     "start_time": "2022-10-10T12:48:16.766911Z"
     }
    },
    "outputs": [],
@@ -492,21 +481,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "3699fba0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:07:45.956053Z",
-     "start_time": "2022-09-10T03:07:45.270664Z"
+     "end_time": "2022-10-10T12:48:17.897844Z",
+     "start_time": "2022-10-10T12:48:17.226624Z"
     }
    },
    "outputs": [],
    "source": [
-    "rdata = adata[adata.obs[\"sample_id\"]==\"BCS1\", :]\n",
-    "sdata = adata[adata.obs[\"sample_id\"]==\"BCS2\", :]\n",
-    "annotation = past.svm_annotation(rdata.obsm[\"embedding\"].copy(),\n",
-    "                                 rdata.obs[\"fine_annot_type\"],\n",
-    "                                 sdata.obsm[\"embedding\"].copy())\n",
+    "bcs1 = adata[adata.obs[\"sample_id\"]==\"BCS1\", :]\n",
+    "bcs2 = adata[adata.obs[\"sample_id\"]==\"BCS2\", :]\n",
+    "annotation = past.svm_annotation(bcs1.obsm[\"embedding\"].copy(),\n",
+    "                                 bcs1.obs[\"fine_annot_type\"],\n",
+    "                                 bcs2.obsm[\"embedding\"].copy())\n",
     "adata.obs[\"fine_annot_type\"][adata.obs[\"sample_id\"]==\"BCS2\"] = annotation"
    ]
   },
@@ -520,12 +509,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "7e6bb2ee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:07:46.995355Z",
-     "start_time": "2022-09-10T03:07:45.957003Z"
+     "end_time": "2022-10-10T12:48:18.896292Z",
+     "start_time": "2022-10-10T12:48:17.898850Z"
     }
    },
    "outputs": [
@@ -533,7 +522,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Variable names are not unique. To make them unique, call `.var_names_make_unique`.\n",
       "... storing 'fine_annot_type' as categorical\n"
      ]
     },
@@ -554,9 +542,9 @@
     }
    ],
    "source": [
-    "sdata = BCS2.copy()\n",
-    "sdata.obs[\"fine_annot_type\"] = annotation\n",
-    "sc.pl.spatial(sdata, color=[\"fine_annot_type\"], title=[\"PAST annotation\"])"
+    "bcs2 = BCS2.copy()\n",
+    "bcs2.obs[\"fine_annot_type\"] = annotation\n",
+    "sc.pl.spatial(bcs2, color=[\"fine_annot_type\"], title=[\"PAST annotation\"])"
    ]
   },
   {
@@ -564,17 +552,17 @@
    "id": "70912b5b",
    "metadata": {},
    "source": [
-    "UMAP visualization of PAST-derived embedding of reference dataset and target dataset(s) colored by dataset label and annotation label."
+    "UMAP visualization of PAST-derived embedding of reference dataset and target dataset(s) colored by dataset label and spatial domain label."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "de694ebb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:08:03.518770Z",
-     "start_time": "2022-09-10T03:07:46.996191Z"
+     "end_time": "2022-10-10T12:48:34.124601Z",
+     "start_time": "2022-10-10T12:48:18.897290Z"
     }
    },
    "outputs": [
@@ -604,7 +592,7 @@
    "source": [
     "sc.pp.neighbors(adata, use_rep=\"embedding\")\n",
     "sc.tl.umap(adata)\n",
-    "sc.pl.umap(adata, color=[\"sample_id\", \"fine_annot_type\"], title=[\"Dataset\", \"Spatial Domains\"], wspace=0.35)"
+    "sc.pl.umap(adata, color=[\"sample_id\", \"fine_annot_type\"], title=[\"Dataset\", \"Spatial domain\"], wspace=0.35)"
    ]
   },
   {
@@ -643,7 +631,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "512px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
