--- a/docs/source/osmFISH_MSC_Tutorial.ipynb
+++ b/docs/source/osmFISH_MSC_Tutorial.ipynb
@@ -26,12 +26,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f8d51c85",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:04:35.653422Z",
-     "start_time": "2022-09-10T03:04:34.431410Z"
+     "end_time": "2022-10-10T12:36:42.580057Z",
+     "start_time": "2022-10-10T12:36:41.428330Z"
     }
    },
    "outputs": [],
@@ -47,12 +47,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1116c3b2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:04:35.663969Z",
-     "start_time": "2022-09-10T03:04:35.654614Z"
+     "end_time": "2022-10-10T12:36:42.631790Z",
+     "start_time": "2022-10-10T12:36:42.581257Z"
     }
    },
    "outputs": [],
@@ -73,12 +73,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "2d2d01bc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:04:35.666760Z",
-     "start_time": "2022-09-10T03:04:35.664972Z"
+     "end_time": "2022-10-10T12:36:42.635594Z",
+     "start_time": "2022-10-10T12:36:42.633419Z"
     }
    },
    "outputs": [],
@@ -88,12 +88,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f521a777",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:04:35.685319Z",
-     "start_time": "2022-09-10T03:04:35.668116Z"
+     "end_time": "2022-10-10T12:36:42.652369Z",
+     "start_time": "2022-10-10T12:36:42.637469Z"
     }
    },
    "outputs": [
@@ -106,7 +106,7 @@
        "    obsm: 'spatial'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,12 +136,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "30ad31c4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:04:35.688875Z",
-     "start_time": "2022-09-10T03:04:35.686166Z"
+     "end_time": "2022-10-10T12:36:42.655870Z",
+     "start_time": "2022-10-10T12:36:42.653166Z"
     }
    },
    "outputs": [],
@@ -160,12 +160,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "33b4c5e4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:04:35.703354Z",
-     "start_time": "2022-09-10T03:04:35.689755Z"
+     "end_time": "2022-10-10T12:36:42.669336Z",
+     "start_time": "2022-10-10T12:36:42.656716Z"
     }
    },
    "outputs": [],
@@ -191,12 +191,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "6d188caf",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:04:37.355069Z",
-     "start_time": "2022-09-10T03:04:35.704441Z"
+     "end_time": "2022-10-10T12:36:44.271973Z",
+     "start_time": "2022-10-10T12:36:42.670270Z"
     }
    },
    "outputs": [],
@@ -214,50 +214,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "810b9f6b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:05:14.616087Z",
-     "start_time": "2022-09-10T03:04:37.356124Z"
-    }
+     "end_time": "2022-10-10T12:37:18.880569Z",
+     "start_time": "2022-10-10T12:36:44.273001Z"
+    },
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This dataset is small enough to train without Ripplewalk_sampler\n",
-      "Epoch:10 Time:1.68s Loss: 9.834625\n",
-      "Epoch:20 Time:1.43s Loss: 5.817118\n",
-      "Epoch:30 Time:1.43s Loss: 4.291026\n",
-      "Epoch:40 Time:1.40s Loss: 3.551848\n",
-      "Epoch:50 Time:1.47s Loss: 3.073708\n",
-      "Epoch:60 Time:1.68s Loss: 2.718571\n",
-      "Epoch:70 Time:1.73s Loss: 2.472935\n",
-      "Epoch:80 Time:1.41s Loss: 2.252422\n",
-      "Epoch:90 Time:1.40s Loss: 2.055867\n",
-      "Epoch:100 Time:1.45s Loss: 1.876279\n",
-      "Epoch:110 Time:1.41s Loss: 1.709191\n",
-      "Epoch:120 Time:1.48s Loss: 1.579540\n",
-      "Epoch:130 Time:1.53s Loss: 1.438076\n",
-      "Epoch:140 Time:1.71s Loss: 1.339844\n",
-      "Epoch:150 Time:1.62s Loss: 1.226726\n",
-      "Epoch:160 Time:1.41s Loss: 1.135266\n",
-      "Epoch:170 Time:1.43s Loss: 1.045838\n",
-      "Epoch:180 Time:1.43s Loss: 0.971031\n",
-      "Epoch:190 Time:1.41s Loss: 0.908428\n",
-      "Epoch:200 Time:1.40s Loss: 0.862362\n",
-      "Epoch:210 Time:1.40s Loss: 0.830849\n",
-      "Epoch:220 Time:1.41s Loss: 0.810711\n",
-      "Epoch:230 Time:1.40s Loss: 0.796035\n",
-      "Epoch:240 Time:1.40s Loss: 0.784878\n",
+      "This dataset is smaller than batchsize so that ripple walk sampler is not used!\n",
+      "Epoch:10 Time:1.63s Loss: 9.834625\n",
+      "Epoch:20 Time:1.36s Loss: 5.817118\n",
+      "Epoch:30 Time:1.35s Loss: 4.291026\n",
+      "Epoch:40 Time:1.35s Loss: 3.551848\n",
+      "Epoch:50 Time:1.34s Loss: 3.073708\n",
+      "Epoch:60 Time:1.35s Loss: 2.718571\n",
+      "Epoch:70 Time:1.35s Loss: 2.472935\n",
+      "Epoch:80 Time:1.37s Loss: 2.252422\n",
+      "Epoch:90 Time:1.35s Loss: 2.055867\n",
+      "Epoch:100 Time:1.36s Loss: 1.876279\n",
+      "Epoch:110 Time:1.35s Loss: 1.709191\n",
+      "Epoch:120 Time:1.35s Loss: 1.579540\n",
+      "Epoch:130 Time:1.35s Loss: 1.438076\n",
+      "Epoch:140 Time:1.36s Loss: 1.339844\n",
+      "Epoch:150 Time:1.37s Loss: 1.226726\n",
+      "Epoch:160 Time:1.37s Loss: 1.135266\n",
+      "Epoch:170 Time:1.38s Loss: 1.045838\n",
+      "Epoch:180 Time:1.38s Loss: 0.971031\n",
+      "Epoch:190 Time:1.39s Loss: 0.908428\n",
+      "Epoch:200 Time:1.39s Loss: 0.862362\n",
+      "Epoch:210 Time:1.38s Loss: 0.830849\n",
+      "Epoch:220 Time:1.37s Loss: 0.810711\n",
+      "Epoch:230 Time:1.38s Loss: 0.796035\n",
+      "Epoch:240 Time:1.38s Loss: 0.784878\n",
       "Model Converge\n"
      ]
     }
    ],
    "source": [
-    "PAST_model.model_train(sdata, epochs=50, lr=1e-3, batchsize=6400, device=device)"
+    "PAST_model.model_train(sdata, epochs=50, lr=1e-3, device=device)"
    ]
   },
   {
@@ -270,12 +271,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "da843b44",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:05:15.114845Z",
-     "start_time": "2022-09-10T03:05:14.617099Z"
+     "end_time": "2022-10-10T12:37:19.107500Z",
+     "start_time": "2022-10-10T12:37:18.881433Z"
     }
    },
    "outputs": [],
@@ -301,12 +302,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "517706a5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:05:25.944007Z",
-     "start_time": "2022-09-10T03:05:15.116343Z"
+     "end_time": "2022-10-10T12:37:30.034081Z",
+     "start_time": "2022-10-10T12:37:19.109487Z"
     }
    },
    "outputs": [
@@ -347,12 +348,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "2aad3431",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:05:26.791571Z",
-     "start_time": "2022-09-10T03:05:25.945329Z"
+     "end_time": "2022-10-10T12:37:31.329824Z",
+     "start_time": "2022-10-10T12:37:30.035200Z"
     }
    },
    "outputs": [
@@ -360,19 +361,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MCVA score:\t\t0.860\n",
-      "Mclust metrics:\t\tARI: 0.573, AMI: 0.657, Homo: 0.681, NMI: 0.659\n",
-      "Dlouvain metrics:\tARI: 0.585, AMI: 0.589, Homo: 0.593, NMI: 0.591\n"
+      "Cross-validation score:\t\tAcc: 0.860, K: 0.836, mF1: 0.805, wF1: 0.857\n",
+      "Mclust metrics:\t\t\tARI: 0.573, AMI: 0.657, NMI: 0.659, FMI:0.632, Comp: 0.638, Homo: 0.681\n",
+      "Dlouvain metrics:\t\tARI: 0.585, AMI: 0.589, NMI: 0.591, FMI:0.643, Comp: 0.589, Homo: 0.593\n"
      ]
     }
    ],
    "source": [
-    "print(\"MCVA score:\", end=\"\\t\\t\")\n",
-    "print(\"%.3f\"%np.average(past.svm_cross_validation(sdata.obsm[\"embedding\"], sdata.obs[\"Region\"])))\n",
-    "print(\"Mclust metrics:\", end=\"\\t\\t\")\n",
-    "ari, ami, homo, nmi = past.cluster_metrics(sdata, \"Region\", \"mclust\")\n",
-    "print(\"Dlouvain metrics:\", end=\"\\t\")\n",
-    "ari, ami, homo, nmi = past.cluster_metrics(sdata, \"Region\", \"Dlouvain\")"
+    "print(\"Cross-validation score:\", end=\"\\t\\t\")\n",
+    "acc, kappa, mf1, wf1 = past.svm_cross_validation(sdata.obsm[\"embedding\"], sdata.obs[\"Region\"])\n",
+    "print(\"Acc: %.3f, K: %.3f, mF1: %.3f, wF1: %.3f\"%(acc.mean(), kappa.mean(), mf1.mean(), wf1.mean()))\n",
+    "\n",
+    "print(\"Mclust metrics:\", end=\"\\t\\t\\t\")\n",
+    "ari, ami, nmi, fmi, comp, homo = past.cluster_metrics(sdata, \"Region\", \"mclust\")\n",
+    "print(\"ARI: %.3f, AMI: %.3f, NMI: %.3f, FMI:%.3f, Comp: %.3f, Homo: %.3f\"%(ari, ami, nmi, fmi, comp, homo))\n",
+    "\n",
+    "print(\"Dlouvain metrics:\", end=\"\\t\\t\")\n",
+    "ari, ami, nmi, fmi, comp, homo = past.cluster_metrics(sdata, \"Region\", \"Dlouvain\")\n",
+    "print(\"ARI: %.3f, AMI: %.3f, NMI: %.3f, FMI:%.3f, Comp: %.3f, Homo: %.3f\"%(ari, ami, nmi, fmi, comp, homo))"
    ]
   },
   {
@@ -388,17 +394,17 @@
    "id": "c2f7834a",
    "metadata": {},
    "source": [
-    "Visualization of latent embeddings colored by annotation and PAST-derived clusters."
+    "Visualization of latent embeddings colored by ground truth and PAST-derived clusters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "f22eeb05",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:05:34.054129Z",
-     "start_time": "2022-09-10T03:05:26.792582Z"
+     "end_time": "2022-10-10T12:37:38.647067Z",
+     "start_time": "2022-10-10T12:37:31.330789Z"
     }
    },
    "outputs": [
@@ -429,17 +435,17 @@
    "id": "e1d1882b",
    "metadata": {},
    "source": [
-    "Visualization of spatial domains colored by annotation and PAST-derived clusters."
+    "Visualization of spatial domains colored by ground truth and PAST-derived clusters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "a95fd699",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-10T03:05:34.379385Z",
-     "start_time": "2022-09-10T03:05:34.055030Z"
+     "end_time": "2022-10-10T12:37:38.970343Z",
+     "start_time": "2022-10-10T12:37:38.648541Z"
     }
    },
    "outputs": [
