--- a/docs/source/10xVisium_DLPFC151507_Tutorial.ipynb
+++ b/docs/source/10xVisium_DLPFC151507_Tutorial.ipynb
@@ -834,19 +834,11 @@
     "sc.pl.spatial(sdata, color=[\"ManualAnnotation\", \"mclust\"], library_id=\"151507\",\n",
     "              title=[\"Grouth Truth\", \"PAST-E\"], wspace=0.4)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67e5d5ce",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torch1.9",
+   "display_name": "torch1.9-py",
    "language": "python",
    "name": "torch1.9"
   },
