--- a/docs/source/STARmap_MPVC_Tutorial.ipynb
+++ b/docs/source/STARmap_MPVC_Tutorial.ipynb
@@ -1193,19 +1193,11 @@
    "source": [
     "sc.pl.embedding(sdata, color=[\"layer_label\", \"mclust\"], basis=\"spatial\", title=[\"Ground Truth\", \"PAST-E-scRNA\"], wspace=0.4)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dbf9f776",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torch1.9",
+   "display_name": "torch1.9-py",
    "language": "python",
    "name": "torch1.9"
   },
