--- a/docs/source/osmFISH_MSC_Tutorial.ipynb
+++ b/docs/source/osmFISH_MSC_Tutorial.ipynb
@@ -468,19 +468,11 @@
    "source": [
     "sc.pl.embedding(sdata, color=[\"Region\", \"mclust\"], basis=\"spatial\", title=[\"Ground Truth\", \"PAST-S\"], wspace=1.0)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5886799a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torch1.9",
+   "display_name": "torch1.9-py",
    "language": "python",
    "name": "torch1.9"
   },
