update citation and data availability

--- a/docs/source/10xVisium_BreastCancer_Tutorial.ipynb
+++ b/docs/source/10xVisium_BreastCancer_Tutorial.ipynb
@@ -68,23 +68,7 @@
    "id": "42146249",
    "metadata": {},
    "source": [
-    "You can uncomment and execute the following command to download the Breast Cancer S1 and S2 datasets in AnnData format."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "5134942a",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-10-11T03:06:47.915714Z",
-     "start_time": "2022-10-11T03:06:47.914156Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# !wget https://health.tsinghua.edu.cn/software/PAST/data/10X_BCS1.h5ad\n",
-    "# !wget https://health.tsinghua.edu.cn/software/PAST/data/10X_BCS2.h5ad"
+    "The data used in this tutorial is available at [TsinghuaCloudDisk](https://cloud.tsinghua.edu.cn/d/9ab272a99ffb4104a37d/)."
    ]
   },
   {
