--- a/docs/source/10xVisium_DLPFC151507_Tutorial.ipynb
+++ b/docs/source/10xVisium_DLPFC151507_Tutorial.ipynb
@@ -66,22 +66,7 @@
    "id": "615bcbc5",
    "metadata": {},
    "source": [
-    "You can uncomment and execute the following command to download the DLPFC dataset in AnnData format."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "001aa3b8",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-10-14T03:11:18.310755Z",
-     "start_time": "2022-10-14T03:11:18.301446Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# !wget https://health.tsinghua.edu.cn/software/PAST/data/10X_DLPFC.h5ad"
+    "The data used in this tutorial is available at [TsinghuaCloudDisk](https://cloud.tsinghua.edu.cn/d/9ab272a99ffb4104a37d/)."
    ]
   },
   {
