--- a/docs/source/STARmap_MPVC_Tutorial.ipynb
+++ b/docs/source/STARmap_MPVC_Tutorial.ipynb
@@ -68,22 +68,7 @@
    "id": "1353c109",
    "metadata": {},
    "source": [
-    "You can uncomment and execute the following command to download the STARmap MPVC dataset in AnnData format."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "a11d69e2",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-10-14T02:50:53.334996Z",
-     "start_time": "2022-10-14T02:50:53.223243Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# !wget https://health.tsinghua.edu.cn/software/PAST/data/STARmap_MPVC.h5ad"
+    "The data used in this tutorial is available at [TsinghuaCloudDisk](https://cloud.tsinghua.edu.cn/d/9ab272a99ffb4104a37d/)."
    ]
   },
   {
