--- a/docs/source/osmFISH_MSC_Tutorial.ipynb
+++ b/docs/source/osmFISH_MSC_Tutorial.ipynb
@@ -68,22 +68,7 @@
    "id": "9cb2fc60",
    "metadata": {},
    "source": [
-    "You can uncomment and execute the following command to download the osmFISH MSC dataset in AnnData format."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "2d2d01bc",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-10-14T04:32:12.399831Z",
-     "start_time": "2022-10-14T04:32:12.383072Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# !wget https://health.tsinghua.edu.cn/software/PAST/data/osmFISH_MSC.h5ad"
+    "The data used in this tutorial is available at [TsinghuaCloudDisk](https://cloud.tsinghua.edu.cn/d/9ab272a99ffb4104a37d/)."
    ]
   },
   {
